# sessionTerminal

./: CMakeLists.txt  README.md  sessionTerminal_0.1a_amd64.deb
res/: Resources.qrc
src/: Structs.h  dbushandler.cpp  dbushandler.h  edit.cpp  edit.h  main.cpp  mainwindow.cpp  mainwindow.h
